# RGBFL-CPP

./: CMakeLists.txt  README.md
include/Convex_Hull/: convex.h
include/RGBFL/: RGBFL.h
include/color_models/: color_models.h
input/data/: i1_8colors_27FL_v1.csv
src/: CMakeLists.txt  color_models.cpp  convex.cpp  main.cpp
